refactor: bump to new fint-kafka and migrate request/reply integration
- Migrate all services/code to use the new fint-kafka API
- Remove unused producer-side classes:
  InstanceFlowRequestProducer,
  InstanceFlowRequestProducerFactory,
  InstanceFlowRequestProducerRecord.
- Update tests to align with the new fint-kafka API; convert TestObject to a record.
- Refresh README with migration notes, updated examples, and removal notes.