@@ -11,32 +11,32 @@ import no.fintlabs.flyt.kafka.event.error.InstanceFlowErrorEventConsumerFactoryS
 import no.fintlabs.flyt.kafka.event.error.InstanceFlowErrorEventProducer;
 import no.fintlabs.flyt.kafka.event.error.InstanceFlowErrorEventProducerRecord;
 import no.fintlabs.flyt.kafka.headers.InstanceFlowHeaders;
-import no.fintlabs.flyt.kafka.requestreply.InstanceFlowReplyProducerRecord;
-import no.fintlabs.flyt.kafka.requestreply.InstanceFlowRequestConsumerFactoryService;
-import no.fintlabs.flyt.kafka.requestreply.InstanceFlowRequestProducerFactory;
-import no.fintlabs.flyt.kafka.requestreply.InstanceFlowRequestProducerRecord;
-import no.fintlabs.kafka.common.ListenerBeanRegistrationService;
-import no.fintlabs.kafka.entity.topic.EntityTopicNameParameters;
-import no.fintlabs.kafka.event.error.Error;
-import no.fintlabs.kafka.event.error.ErrorCollection;
-import no.fintlabs.kafka.event.error.topic.ErrorEventTopicNameParameters;
-import no.fintlabs.kafka.event.topic.EventTopicNameParameters;
-import no.fintlabs.kafka.requestreply.RequestProducerConfiguration;
-import no.fintlabs.kafka.requestreply.topic.ReplyTopicNameParameters;
-import no.fintlabs.kafka.requestreply.topic.RequestTopicNameParameters;
+import no.fintlabs.kafka.model.Error;
+import no.fintlabs.kafka.model.ErrorCollection;
+import no.fintlabs.kafka.topic.name.EntityTopicNameParameters;
+import no.fintlabs.kafka.topic.name.ErrorEventTopicNameParameters;
+import no.fintlabs.kafka.topic.name.EventTopicNameParameters;
+import no.fintlabs.kafka.topic.name.TopicNamePrefixParameters;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.kafka.test.context.EmbeddedKafka;
 import org.springframework.test.annotation.DirtiesContext;
 
-import java.time.Duration;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
-import static org.junit.jupiter.api.Assertions.*;
 
-@SpringBootTest
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
+@SpringBootTest(properties = {
+        "fint.kafka.topic.defaults.org-id=test-org-id",
+        "fint.kafka.topic.defaults.domain-context=test-domain-context"
+})
 @EmbeddedKafka
 @DirtiesContext
 public class InstanceFlowProducerConsumerIntegrationTest {
@@ -56,47 +56,7 @@ public class InstanceFlowProducerConsumerIntegrationTest {
     @Autowired
     private InstanceFlowEntityConsumerFactoryService entityConsumerFactory;
 
-    @Autowired
-    private InstanceFlowRequestProducerFactory requestProducerFactory;
-    @Autowired
-    private InstanceFlowRequestConsumerFactoryService requestConsumerFactory;
-
-    @Autowired
-    private ListenerBeanRegistrationService fintListenerBeanRegistrationService;
-
-    private static class TestObject {
-        private Integer integer;
-        private String string;
-
-        public Integer getInteger() {
-            return integer;
-        }
-
-        public void setInteger(Integer integer) {
-            this.integer = integer;
-        }
-
-        public String getString() {
-            return string;
-        }
-
-        public void setString(String string) {
-            this.string = string;
-        }
-
-        @Override
-        public boolean equals(Object o) {
-            if (this == o) return true;
-            if (o == null || getClass() != o.getClass()) return false;
-            TestObject that = (TestObject) o;
-            return Objects.equals(integer, that.integer) &&
-                    Objects.equals(string, that.string);
-        }
-
-        @Override
-        public int hashCode() {
-            return Objects.hash(integer, string);
-        }
+    private record TestObject(Integer integer, String string) {
     }
 
     @Test
@@ -110,28 +70,40 @@ public class InstanceFlowProducerConsumerIntegrationTest {
                     consumedEvents.add(consumerRecord);
                     eventCDL.countDown();
                 }
-        ).createContainer(EventTopicNameParameters.builder().eventName("event").build());
-        fintListenerBeanRegistrationService.registerBean(eventConsumer);
+        ).createContainer(EventTopicNameParameters.builder()
+                .topicNamePrefixParameters(
+                        TopicNamePrefixParameters.builder()
+                                .orgId("test-org-id")
+                                .domainContext("test-domain-context")
+                                .build()
+                )
+                .eventName("event")
+                .build());
+        eventConsumer.start();
 
-        TestObject testObject = new TestObject();
-        testObject.setInteger(2);
-        testObject.setString("testObjectString");
+        TestObject testObject = new TestObject(2, "testObjectString");
 
         InstanceFlowEventProducerRecord<TestObject> record = InstanceFlowEventProducerRecord.<TestObject>builder()
-                        .topicNameParameters(EventTopicNameParameters.builder()
-                                .eventName("event")
-                                .build())
-                        .instanceFlowHeaders(createInstanceFlowHeaders())
-                        .value(testObject)
-                        .build();
+                .topicNameParameters(EventTopicNameParameters.builder()
+                        .topicNamePrefixParameters(
+                                TopicNamePrefixParameters.builder()
+                                        .orgId("test-org-id")
+                                        .domainContext("test-domain-context")
+                                        .build()
+                        )
+                        .eventName("event")
+                        .build())
+                .instanceFlowHeaders(createInstanceFlowHeaders())
+                .value(testObject)
+                .build();
         eventProducer.send(record);
 
         boolean awaitFinished = eventCDL.await(10, TimeUnit.SECONDS);
         assertTrue(awaitFinished, "The count down latch did not count down to zero within the expected time");
 
         assertEquals(1, consumedEvents.size());
-        assertEquals(createInstanceFlowHeaders(), consumedEvents.get(0).getInstanceFlowHeaders());
-        assertEquals(testObject, consumedEvents.get(0).getConsumerRecord().value());
+        assertEquals(createInstanceFlowHeaders(), consumedEvents.getFirst().instanceFlowHeaders());
+        assertEquals(testObject, consumedEvents.getFirst().consumerRecord().value());
     }
 
     @Test
@@ -143,8 +115,16 @@ public class InstanceFlowProducerConsumerIntegrationTest {
                     consumedEvents.add(consumerRecord);
                     eventCDL.countDown();
                 }
-        ).createContainer(ErrorEventTopicNameParameters.builder().errorEventName("event").build());
-        fintListenerBeanRegistrationService.registerBean(eventConsumer);
+        ).createContainer(ErrorEventTopicNameParameters.builder()
+                .topicNamePrefixParameters(
+                        TopicNamePrefixParameters.builder()
+                                .orgId("test-org-id")
+                                .domainContext("test-domain-context")
+                                .build()
+                )
+                .errorEventName("event")
+                .build());
+        eventConsumer.start();
 
         ErrorCollection errorCollection = new ErrorCollection(List.of(
                 Error.builder()
@@ -163,7 +143,12 @@ public class InstanceFlowProducerConsumerIntegrationTest {
 
         InstanceFlowErrorEventProducerRecord record = InstanceFlowErrorEventProducerRecord.builder()
                 .topicNameParameters(ErrorEventTopicNameParameters.builder()
-                        .errorEventName("event")
+                        .topicNamePrefixParameters(
+                                TopicNamePrefixParameters.builder()
+                                        .orgId("test-org-id")
+                                        .domainContext("test-domain-context")
+                                        .build()
+                        ).errorEventName("event")
                         .build())
                 .instanceFlowHeaders(createInstanceFlowHeaders())
                 .errorCollection(errorCollection)
@@ -175,8 +160,8 @@ public class InstanceFlowProducerConsumerIntegrationTest {
         assertTrue(awaitFinished, "The count down latch did not count down to zero within the expected time");
 
         assertEquals(1, consumedEvents.size());
-        assertEquals(createInstanceFlowHeaders(), consumedEvents.get(0).getInstanceFlowHeaders());
-        assertEquals(errorCollection, consumedEvents.get(0).getConsumerRecord().value());
+        assertEquals(createInstanceFlowHeaders(), consumedEvents.getFirst().instanceFlowHeaders());
+        assertEquals(errorCollection, consumedEvents.getFirst().consumerRecord().value());
     }
 
     @Test
@@ -190,13 +175,27 @@ public class InstanceFlowProducerConsumerIntegrationTest {
                     consumedEntities.add(consumerRecord);
                     entityCDL.countDown();
                 }
-        ).createContainer(EntityTopicNameParameters.builder().resource("resource").build());
-        fintListenerBeanRegistrationService.registerBean(entityConsumer);
+        ).createContainer(EntityTopicNameParameters.builder()
+                .topicNamePrefixParameters(
+                        TopicNamePrefixParameters.builder()
+                                .orgId("test-org-id")
+                                .domainContext("test-domain-context")
+                                .build()
+                )
+                .resourceName("resource")
+                .build());
+        entityConsumer.start();
 
         InstanceFlowEntityProducerRecord<String> record = InstanceFlowEntityProducerRecord.<String>builder()
                 .topicNameParameters(
                         EntityTopicNameParameters.builder()
-                                .resource("resource")
+                                .topicNamePrefixParameters(
+                                        TopicNamePrefixParameters.builder()
+                                                .orgId("test-org-id")
+                                                .domainContext("test-domain-context")
+                                                .build()
+                                )
+                                .resourceName("resource")
                                 .build()
                 )
                 .instanceFlowHeaders(createInstanceFlowHeaders())
@@ -209,48 +208,8 @@ public class InstanceFlowProducerConsumerIntegrationTest {
         assertTrue(awaitFinished, "The count down latch did not count down to zero within the expected time");
 
         assertEquals(1, consumedEntities.size());
-        assertEquals(createInstanceFlowHeaders(), consumedEntities.get(0).getInstanceFlowHeaders());
-        assertEquals("valueString", consumedEntities.get(0).getConsumerRecord().value());
-    }
-
-    @Test
-    public void requestReplyTest() {
-        var requestProducer = requestProducerFactory.createProducer(
-                ReplyTopicNameParameters.builder()
-                        .applicationId("application")
-                        .resource("resource")
-                        .build(),
-                String.class,
-                Integer.class,
-                RequestProducerConfiguration
-                        .builder()
-                        .defaultReplyTimeout(Duration.ofSeconds(10))
-                        .build()
-        );
-
-        var requestConsumer = requestConsumerFactory.createRecordFactory(
-                String.class,
-                Integer.class,
-                (consumerRecord) -> InstanceFlowReplyProducerRecord.<Integer>builder()
-                            .instanceFlowHeaders(consumerRecord.getInstanceFlowHeaders())
-                            .value(32)
-                            .build()
-        ).createContainer(RequestTopicNameParameters.builder().resource("resource").build());
-        fintListenerBeanRegistrationService.registerBean(requestConsumer);
-
-        Optional<InstanceFlowConsumerRecord<Integer>> reply = requestProducer.requestAndReceive(
-                InstanceFlowRequestProducerRecord.<String>builder()
-                        .topicNameParameters(RequestTopicNameParameters.builder()
-                                .resource("resource")
-                                .build())
-                        .instanceFlowHeaders(createInstanceFlowHeaders())
-                        .value("requestValueString")
-                        .build()
-        );
-
-        assertTrue(reply.isPresent(), "Reply should be present");
-        assertEquals(createInstanceFlowHeaders(), reply.get().getInstanceFlowHeaders());
-        assertEquals(32, reply.get().getConsumerRecord().value());
+        assertEquals(createInstanceFlowHeaders(), consumedEntities.getFirst().instanceFlowHeaders());
+        assertEquals("valueString", consumedEntities.getFirst().consumerRecord().value());
     }
 
     private InstanceFlowHeaders createInstanceFlowHeaders() {
